<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/application_Background_color"
    tools:context="yh.tipcalculator.CalculateActivity">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxFriendly"
        android:layout_marginTop="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:text="@string/FriendlyCheckBox"
        android:onClick="onCheckClick" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxSpecials"
        android:checked="false"
        android:layout_alignTop="@+id/checkBoxFriendly"
        android:layout_toRightOf="@+id/checkBoxFriendly"
        android:layout_toEndOf="@+id/checkBoxFriendly"
        android:text="@string/specialsCheckBox"
        android:onClick="onCheckClick" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxOpinion"
        android:layout_toEndOf="@+id/checkBoxSpecials"
        android:checked="false"
        android:layout_alignTop="@+id/checkBoxSpecials"
        android:layout_toRightOf="@+id/checkBoxSpecials"
        android:text="@string/opinionCheckBox"
        android:onClick="onCheckClick" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/badRadioBtn"
            android:id="@+id/radioButtonBad"
            android:checked="false"
            android:onClick="onRadioClick" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okRadioBtn"
            android:id="@+id/radioButtonAlright"
            android:checked="false"
            android:onClick="onRadioClick" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goodRadioBtn"
            android:id="@+id/radioButtonGood"
            android:checked="false"
            android:onClick="onRadioClick" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/radioGroupTv"
        android:id="@+id/textView"
        android:layout_marginTop="170dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/checkBoxTv"
        android:id="@+id/textView2"
        android:layout_above="@+id/checkBoxSpecials"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/problemSpinner"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="68dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/problemSpinner"
        android:id="@+id/textView3"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:layout_below="@+id/problemSpinner"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
